# DyeDactic

./: README.md  biliverdin_species.smi  calculate_hlgap.py  draw_pie_diagram.py  generate_inputs.py  ground_state_linear_model.py  orcein_colour_vs_pH.py  plot_experimental_spectra_SI.py  pyproject.toml  tddft_energy_correlation_SI_figures.py  tddft_energy_correlation_in_groups.py  tddft_energy_correlation_manuscript_figures.py  tddft_fosc_SI_figures.py  tddft_fosc_in_groups.py  tsne_natural_visualize.py  visualize_hlgap.py
data/: orbital_energies.csv  pigments.csv  pigments_with_hlgap.csv  tddft_results.csv
inputs/1,3-dihydroxy-2-methoxyanthraquinone/: 1,3-dihydroxy-2-methoxyanthraquinone_mm.xyz  1,3-dihydroxy-2-methoxyanthraquinone_xtb.xyz  b2plyp.inp  b2plyp_nosolv.inp  bmk.inp  bmk_nosolv.inp  camb3lyp.inp  camb3lyp_nosolv.inp  m062x.inp  m062x_nosolv.inp  opt_pbe0.inp  pbe0_nosolv.inp  pbeqidh.inp  pbeqidh_nosolv.inp  wb97xd4.inp  wb97xd4_nosolv.inp  wb97xd4_polar.inp  wb97xd4_polar_nosolv.inp  wb97xd4_tda.inp  wb97xd4_tda_nosolv.inp  wpbepp86.inp  wpbepp86_nosolv.inp
inputs/1-aminopurpurin/: 1-aminopurpurin_mm.xyz  1-aminopurpurin_xtb.xyz  b2plyp.inp  b2plyp_nosolv.inp  bmk.inp  bmk_nosolv.inp  camb3lyp.inp  camb3lyp_nosolv.inp  m062x.inp  m062x_nosolv.inp  opt_pbe0.inp  pbe0_nosolv.inp  pbeqidh.inp  pbeqidh_nosolv.inp  wb97xd4.inp  wb97xd4_nosolv.inp  wb97xd4_polar.inp  wb97xd4_polar_nosolv.inp  (+4 more)
mpnn_training/: chemprop_hyperopt.py  convert_v1_to_v2.ipynb  predict.py  prepare_dataset.ipynb  visualize_training.py
src/: convert_spectrum_to_colour.py
(+14202 files in other folders)
