[tool.poetry]
name = "si-data"
version = "0.1.0"
description = "Data and scripts essential for reproduction of Karlov et al."
authors = ["Dmitry Karlov <dmitry.karlov@colorifix.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = " >=3.8,<3.9"
numpy = "1.21"
rdkit = "^2024.3.5"
loguru = "^0.7.2"
pandas = "2.0"
scikit-learn = "1.3.2"
scipy = "1.10"
matplotlib = "3.7"
chemprop = "1.7.1"
hyperopt = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
